--- a/en.html
+++ b/en.html
@@ -2,7 +2,7 @@
 <html lang="ua">
 <head>
 	<meta charset="utf-8" />
-	<title>САМУЇ - Масаж за стародавніми тайськими методиками</title>
+	<title>SAMUI - Massage Based on Ancient Thai Techniques</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
@@ -27,8 +27,8 @@
 				</div>
 				<div class="top_lang">
 					<ul class="lang">
-						<li class="active">ua</li>
-						<a href="en.html"><li>en</li></a>
+						<li class="active">en</li>
+						<a href="index.html"><li>ua</li></a>
 					</ul>
 				</div>
 				<!-- <div class="top_btn">
@@ -40,13 +40,13 @@
 					<img src="img/logo_menu.png" alt="">
 				</div>
 				<ul class="menu2">
-					<a class="scroll" href="#gallery"><li>Фото <br>салону</li></a>
-					<a class="scroll" href="#price"><li>Послуги <br>та ціни</li></a>
-					<a class="scroll" href="#personal"><li>Персонал</li></a>
-					<a class="popup" href="#bookFormWrapper"><li>Записатись <br>на масаж</li></a>
-					<a class="scroll" href="#discount"><li>Дисконтна <br>програма</li></a>
-					<a class="scroll" href="#promo"><li>Акції</li></a>
-					<a class="scroll" href="#contact"><li>Контакти</li></a>
+					<a class="scroll" href="#gallery"><li>Gallery</li></a>
+					<a class="scroll" href="#price"><li>Services <br> & Prices</li></a>
+					<a class="scroll" href="#personal"><li>Staff</li></a>
+					<a class="popup" href="#bookFormWrapper"><li>Book a <br>massage</li></a>
+					<a class="scroll" href="#discount"><li>Discount <br> program</li></a>
+					<a class="scroll" href="#gift"><li>Special offers</li></a>
+					<a class="scroll" href="#contact"><li>Contacts</li></a>
 				</ul>
 			</div>	
 		</div>
@@ -62,19 +62,19 @@
 				</span>
 			</div>
 			<ul class="lang">
-				<li class="active">ua</li>
-				<a href="en.html"><li>en</li></a>
+				<li class="active">en</li>
+				<a href="index.html"><li>ua</li></a>
 			</ul>
 			<div class="top_desc">
-				Масаж за стародавніми тайськими методиками
+				Massage Based on Ancient Thai Techniques
 			</div>
 			<div class="main_content">
 				<img src="img/logo.png" alt="">
-				<h1>Салон тайського масажу</h1>
+				<h1>THAI MASSAGE SALON</h1>
 			</div>
 			<div class="main_contact">
 				<div class="adress">
-					м.Київ, пр-т В. Лобановського, 6А, прим. 139 (2 пов.) <br>Графік роботи: з 10:00 до 22:00, без вихідних
+					Kyiv city, V. Lobanovskogo Avenue, 6А, office 139 (2nd floor) <br>Opening hours: daily, from 10:00 to 22:00
 				</div>
 				<div class="phone">
 					<a href="tel:+380674494346">(067) 449 43 46</a>,
@@ -88,13 +88,13 @@
 	<div class="menu">
 		<div class="container">
 			<ul>
-				<a class="scroll" href="#gallery"><li>Фото салону</li></a>
-				<a class="scroll" href="#price"><li>Послуги <br>та ціни</li></a>
-				<a class="scroll" href="#personal"><li>Персонал</li></a>
-				<a class="popup" href="#bookFormWrapper"><li>Записатись <br>на масаж</li></a>
-				<a class="scroll" href="#discount"><li>Дисконтна <br>програма</li></a>
-				<a class="scroll" href="#promo"><li>Акції</li></a>
-				<a class="scroll" href="#contact"><li>Контакти</li></a>
+				<a class="scroll" href="#gallery"><li>Gallery</li></a>
+				<a class="scroll" href="#price"><li>Services <br> & Prices</li></a>
+				<a class="scroll" href="#personal"><li>Staff</li></a>
+				<a class="popup" href="#bookFormWrapper"><li>Book a <br>massage</li></a>
+				<a class="scroll" href="#discount"><li>Discount <br> program</li></a>
+				<a class="scroll" href="#gift"><li>Special offers</li></a>
+				<a class="scroll" href="#contact"><li>Contacts</li></a>
 			</ul>
 		</div>
 	</div>
@@ -102,7 +102,7 @@
 
 	<section id="gallery" class="gallery">
 		<div class="container">
-			<h3>Фото салону</h3>
+			<h3>Gallery</h3>
 			<div class="gallery_wrapper">
 				<img src="img/gallery_1.jpg" alt="">
 				<img src="img/gallery_2.jpg" alt="">
@@ -114,65 +114,85 @@
 				<img src="img/gallery_3.jpg" alt="">
 				<img src="img/gallery_1.jpg" alt="">
 			</div>
-			<div class="slider_wrapper">
-				<div class="prev"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></div>
-				<div class="next"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></div>
-				<div class="slider">
-					<img src="img/gallery_1.jpg" alt="">
-					<img src="img/gallery_2.jpg" alt="">
-					<img src="img/gallery_3.jpg" alt="">
-					<img src="img/gallery_3.jpg" alt="">
-					<img src="img/gallery_1.jpg" alt="">
-					<img src="img/gallery_2.jpg" alt="">
-					<img src="img/gallery_2.jpg" alt="">
-					<img src="img/gallery_3.jpg" alt="">
-					<img src="img/gallery_1.jpg" alt="">
-				</div>
-			</div>
 		</div>
 	</section>
 
 	<section id="price" class="price">
 		<div class="container">
-			<h3 class="yellow">Послуги та ціни</h3>
+			<h3 class="yellow">Services & Prices</h3>
 			<div class="row">
 				<div class="col-sm-4">
 					<img src="img/price_1.jpg" alt="">
-					<h4>Традиційний <br>тайський масаж</h4>
-					<h5>60 хв – 650 грн <br>90 хв – 850 грн</h5>
-					<p>Традиційний тайський масаж – <br>це сухий масаж тіла від <br>пальців ніг до верхівки голови, який виконується в одязі. Спрямований на покращення <br>фізичного та емоційного стану, <br>усуває больові відчуття м’язів <br>та суглобів.</p>
+					<h4>Traditional Thai massage <span>1</span></h4>
+					<h5>60 min – 650 UAH <br>90 min – 850 UAH</h5>
+					<p>Traditional Thai massage is a
+dry full-body massage (from
+toes to head) over the clothes.
+It's intended to improve
+physical and emotional state, as
+well as to relieve pain in
+muscles and joints.</p>
 				</div>
 				<div class="col-sm-4">
 					<img src="img/price_2.jpg" alt="">
-					<h4>Традиційний тайський <br>масаж в чотири руки</h4>
-					<h5>60 хв – 960 грн <br>90 хв – 1250 грн</h5>
-					<p>Цей вид масажу виконується одночасно двома майстрами. Спрямований на перерозподіл потоків енергії Вашого тіла, допоможе позбутися втоми, відновить внутрішню <br>рівновагу, зніме м'язову <br>напругу.</p>
+					<h4>Traditional 4 hands Thai massage</h4>
+					<h5>60 min – 960 UAH <br>90 min – 1250 UAH</h5>
+					<p>This type of massage is given by
+two masters simultaneously.
+It's intended to redistribute
+body energy flows, mitigate
+fatigue, recover mental
+equilibrium, and remove
+muscle tension.</p>
 				</div>
 				<div class="col-sm-4">
 					<img src="img/price_3.jpg" alt="">
-					<h4>Традиційний тайський <br>масаж для двох</h4>
-					<h5>60 хв – 1150 грн <br>90 хв – 1500 грн</h5>
-					<p>Це масаж для двох в одній <br>кімнаті. Два майстри <br>працюючи паралельно, допоможуть Вам досягти розслаблення, гармонії <br>і «налаштуватися на одну <br>хвилю».</p>
+					<h4>Traditional Thai massage for couples</h4>
+					<h5>60 min – 1150 UAH <br>90 min – 1500 UAH</h5>
+					<p>It is a massage therapy for two
+persons in the same room. Two
+masters give a massage
+simultaneously helping both
+persons to relax, feel an
+internal harmony, as well as get
+in tune with each other.</p>
 				</div>
 			<!-- </div>
 			<div class="row"> -->
 				<div class="col-sm-4">
 					<img src="img/price_4.jpg" alt="">
-					<h4>Тайський масаж гарячими <br>трав’яними мішечками</h4>
-					<h5>60 хв – 650 грн <br>90 хв – 850 грн</h5>
-					<p>Поєднання традиційного масажу і прогрівання тіла мішечками із сумішами тайських гірських трав та прянощів. М'який вплив тепла і випарів цілющих трав покращує відтік лімфи, знімає стрес та втому.</p>
+					<h4>Thai massage + Pahopspan <br><span>1</span></h4>
+					<h5>60 min – 650 UAH <br>90 min – 850 UAH</h5>
+					<p>A combination of traditional
+massage and deep body
+warming using compresses
+filled with mixtures of Thai
+mountain herbs and spices. Soft
+warmth and vapors of healing
+herbs improve lymph drain,
+relieve stress and mitigate
+fatigue.</p>
 				</div>
 				<div class="col-sm-4">
 					<img src="img/price_5.jpg" alt="">
-					<h4>Тайський масаж <br>з ефірними оліями <!-- <br><span>1</span> --></h4>
-					<h5>60 хв – 960 грн <br>90 хв – 1250 грн</h5>
-					<p>Масаж має заспокійливу дію, чудово зволожує та живіть <br>шкіру. Це  заряд бадьорості, <br>гарного настрою і відчуття <br>легкості у всьому тілі.</p>
+					<h4>Thai massage with essential oils</h4>
+					<h5>60 min – 960 UAH <br>90 min – 1250 UAH</h5>
+					<p>Massage provides a sedative
+effect, as well as moisturizes
+and nourishes skin perfectly. It
+ensures energy boost, good
+mood and feeling of lightness.</p>
 				</div>
 				<div class="col-sm-4">
 					<img src="img/price_6.jpg" alt="">
-					<h4>Тайський масаж <br>з ефирнімі олиямі <br>в 4 руки</h4>
-					<h5>60 хв – 1150 грн <br>90 хв – 1500 грн</h5>
-					<p>Цей вид масажу виконується одночасно двома фахівцями. Чудово розслабляє, знімає <br>втому та покращує емоційний <br>стан.</p>
+					<h4>4 Hands Thai massage with essential oils</h4>
+					<h5>60 min – 1150 UAH <br>90 min – 1500 UAH</h5>
+					<p>This type of massage is given by
+two professionals
+simultaneously.
+It helps to relax, mitigate
+fatigue and improve emotional
+state.</p>
 				</div>
 			</div>
 		</div>
@@ -186,8 +206,8 @@
 					<img class="shadow" src="img/shadow.png" alt="">
 				</div>
 				<div class="col-sm-6 col-md-5">
-					<h3 class="yellow">Подарунковий <br>сертифікат</h3>
-					<p>Це найкраща можливість зробити приємний та корисний подарунок</p>
+					<h3 class="yellow">GIFT <br>CERTIFICATE</h3>
+					<p>The best chance to make a pleasant and useful gift</p>
 				</div>
 			</div>
 		</div>
@@ -195,12 +215,12 @@
 
 	<section id="personal" class="personal">
 		<div class="container">
-			<h3>Персонал</h3>
+			<h3>Staff</h3>
 			<div class="row">
 				<div class="col-sm-5 col-md-5">
-					<!-- <img src="img/personal_1.jpg" alt=""> -->
-					<h4>Майстер Енні <br><span>сертифікований масажист</span></h4>
-					<p>рік народження – 1986 р. <br>зріст – 153 см, вага – 65 кг.</p>
+					<img src="img/personal_1.jpg" alt="">
+					<h4>Master Ann, <br><span>certified massage therapist</span></h4>
+					<p>year of birth – 1986 <br>height – 153 cm, weight – 65 kg</p>
 				</div>
 				<div class="col-sm-7 col-md-7 cert">
 					<img src="img/personal_cert_1.jpg" alt="">
@@ -208,9 +228,9 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-5 col-md-5">
-					<!-- <img src="img/personal_1.jpg" alt=""> -->
-					<h4>Майстер Бі <br><span>сертифікований масажист</span></h4>
-					<p>рік народження – 1982 р. <br>зріст – 151 см, вага – 55 кг.</p>
+					<img src="img/personal_1.jpg" alt="">
+					<h4>Master Bee, <br><span>certified massage therapist</span></h4>
+					<p>year of birth – 1982 <br>height – 151 cm, weight – 55 kg</p>
 				</div>
 				<div class="col-sm-7 col-md-7 cert">
 					<img src="img/personal_cert_2.jpg" alt="">
@@ -221,64 +241,71 @@
 	
 	<section id="discount" class="discount">
 		<div class="container">
-			<h3 class="yellow">Дисконтна програма</h3>
+			<h3 class="yellow">Discount program</h3>
 			<div class="row">
 				<div class="col-sm-6 col-lg-5 col-md-6">
 					<img src="img/cert.png" alt="">
 					<img src="img/shadow2.png" alt="" class="shadow">
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 col-lg-offset-1 discount_text">
-					<p>Власникам картки постійного клієнта надається знижка на всі послуги <br>в такому розмірі:</p>
+					<p>Loyalty card holders receive a discount <br>for all services as follows:</p>
 					<ul>
-						<li><span>з 11-го відвідування – 10%</span></li>
-						<li><span>з 21-го відвідування – 20%</span></li>
-						<li><span>з 31-го відвідування – 30%</span></li>
+						<li><span>11<sup>th</sup> visit and more – 10%</span></li>
+						<li><span>21<sup>st</sup> visit and more – 20%</span></li>
+						<li><span>31<sup>st</sup> visit and more – 30%</span></li>
 					</ul>
 				</div>
 			</div>
-			<h5>Картку можна отримати після першого <br>відвідування салону, заповнивши анкету.</h5>
+			<h5>To obtain loyalty card, please complete <br>a form after the first visit.</h5>
 		</div>
 	</section>
 
-	<section id="promo" class="promo">
+	<section class="promo">
 		<div class="container">
-			<h3>Акції</h3>
+			<h3>Special offers</h3>
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="promo_pict">
 						<img src="img/promo_1.png" alt="">
 					</div>
-					<h4>Знижка <br>до Дня народження</h4>
-					<p>Протягом семи днів до та після дати Дня народження Ви отримуєте знижку 20% <br>на будь-який вид масажу. Для отримання знижки необхідно пред’явити документ, що підтверджує дату народження.</p>
+					<h4>Birthday <br>discount</h4>
+					<p>During 7 days before and after a
+birthday you'll get 20% discount
+for any type of massage
+therapy. To get a discount,
+present a document certifying
+your date of birth.</p>
 				</div>
 				<div class="col-sm-4">
 					<div class="promo_pict">
 						<img src="img/promo_2.png" alt="">
 					</div>
-					<h4>Знижка на послуги <br>до 13:00</h4>
-					<p>В будні дні з 10:00 до 13:00 діє знижка 10% на будь-який вид масажу.</p>
+					<h4>Discount for services <br>till 13:00</h4>
+					<p>10% discount for any type of
+massage therapy is valid daily
+from 10:00 to 13:00.</p>
 				</div>
 				<div class="col-sm-4">
 					<div class="promo_pict">
 						<img src="img/promo_3.png" alt="">
 					</div>
-					<h4>Знижка на подарункові <br>сертифікати</h4>
+					<h4>Discount for gift <br>certificates:</h4>
 					<ul>
-						<li><span>при купівлі 10 подарункових сертифікатів – 10%</span></li>
-						<li><span>при купівлі 20 подарункових сертифікатів – 20%</span></li>
+						<li><span>10% with a purchase of 10 gift certificates</span></li>
+						<li><span>20% with a purchase of 20 gift certificates</span></li>
 					</ul>
 				</div>
 			</div>
-			<h5>*Увага! Знижки та акції не сумуються.</h5>
+			<h5>*Important! Discounts and special offers are not cumulative.</h5>
 		</div>
 	</section>
 
 	<section id="contact" class="contact">
 		<div class="container">
-			<h3 class="yellow">Контакти</h3>
-			<p>м.Київ, пр-т В. Лобановського, 6А, прим. 139 (2 пов.)</p>
+			<h3 class="yellow">Contacts</h3>
+			<p>Kyiv city, V. Lobanovskogo Avenue, 6А, office 139 (2nd floor)</p>
 			<p><a href="tel:+380674494346">(067) 449 43 46</a><a href="tel:+380660287989">(066) 028 79 89</a></p>
-			<p>Графік роботи: з 10:00 до 22:00, без вихідних</p>
+			<p>Opening hours: daily, from 10:00 to 22:00</p>
 		</div>
 	</section>
 
@@ -291,8 +318,8 @@
 			<div class="footer_wrapper">
 				<img src="img/logo_footer.png" alt="">
 				<div class="policy">
-					<a class="popup" href="#politics">Політика конфіденційності</a>
-					<p>&copy; <script type="text/javascript">var mdate = new Date(); document.write(mdate.getFullYear());</script> "SAMUI". Всі права захищено</p>
+					<a class="popup" href="#politics">Privacy policy.</a>
+					<p>&copy; <script type="text/javascript">var mdate = new Date(); document.write(mdate.getFullYear());</script> “SAMUI”. All rights reserved.</p>
 				</div>
 			</div>
 		</div>
@@ -340,20 +367,20 @@
 	</div>
 	<div class="hidden">
 		<div class="form_wrapper" id="bookFormWrapper">
-			<h6>Заповніть форму,</h6>
-			<p>щоб записатись на масаж</p>
+			<h6>Fill in the form,</h6>
+			<p>for booking a massage</p>
 			<form method="post" class="form" id="bookForm" action="mail.php">
 				<input type="hidden" name="whatform" value="Форма - Записаться на массаж" />
-				<input type="text" name="name" placeholder="Ваше имя" />
-				<input type="tel" name="phone" class="phone" placeholder="Ваш телефон" />
-				<input type="email" name="email" placeholder="Ваш e-mail" />
-				<input class="datetimepicker" placeholder="Выберите дату и время" name="date" type="text">
+				<input type="text" name="name" placeholder="Your name" />
+				<input type="tel" name="phone" class="phone" placeholder="Your phone number" />
+				<input type="email" name="email" placeholder="Your e-mail" />
+				<input class="datetimepicker" placeholder="Choose a date and time" name="date" type="text">
 				<select name="master">
-					<option value="" disabled selected>Выберите мастера</option>
-					<option value="">Майстер Енні</option>
-					<option value="">Майстер Бі</option>
+					<option value="" disabled selected>Сhoose a masseur</option>
+					<option value="">Master Ann</option>
+					<option value="">Master Bee</option>
 				</select>
-				<button class="main_btn">Записатись на масаж</button>
+				<button class="main_btn">Book a massage</button>
 			</form>
 		</div>
 	</div>
