--- a/en.html
+++ b/en.html
@@ -45,7 +45,7 @@
 					<a class="scroll" href="#personal"><li>Staff</li></a>
 					<a class="popup" href="#bookFormWrapper"><li>Book a <br>massage</li></a>
 					<a class="scroll" href="#discount"><li>Discount <br> program</li></a>
-					<a class="scroll" href="#gift"><li>Special offers</li></a>
+					<a class="scroll" href="#promo"><li>Special offers</li></a>
 					<a class="scroll" href="#contact"><li>Contacts</li></a>
 				</ul>
 			</div>	
@@ -93,7 +93,7 @@
 				<a class="scroll" href="#personal"><li>Staff</li></a>
 				<a class="popup" href="#bookFormWrapper"><li>Book a <br>massage</li></a>
 				<a class="scroll" href="#discount"><li>Discount <br> program</li></a>
-				<a class="scroll" href="#gift"><li>Special offers</li></a>
+				<a class="scroll" href="#promo"><li>Special offers</li></a>
 				<a class="scroll" href="#contact"><li>Contacts</li></a>
 			</ul>
 		</div>
@@ -218,7 +218,7 @@ state.</p>
 			<h3>Staff</h3>
 			<div class="row">
 				<div class="col-sm-5 col-md-5">
-					<img src="img/personal_1.jpg" alt="">
+					<!-- <img src="img/personal_1.jpg" alt=""> -->
 					<h4>Master Ann, <br><span>certified massage therapist</span></h4>
 					<p>year of birth – 1986 <br>height – 153 cm, weight – 65 kg</p>
 				</div>
@@ -228,7 +228,7 @@ state.</p>
 			</div>
 			<div class="row">
 				<div class="col-sm-5 col-md-5">
-					<img src="img/personal_1.jpg" alt="">
+					<!-- <img src="img/personal_1.jpg" alt=""> -->
 					<h4>Master Bee, <br><span>certified massage therapist</span></h4>
 					<p>year of birth – 1982 <br>height – 151 cm, weight – 55 kg</p>
 				</div>
@@ -260,7 +260,7 @@ state.</p>
 		</div>
 	</section>
 
-	<section class="promo">
+	<section id="promo" class="promo">
 		<div class="container">
 			<h3>Special offers</h3>
 			<div class="row">
@@ -367,7 +367,7 @@ from 10:00 to 13:00.</p>
 	</div>
 	<div class="hidden">
 		<div class="form_wrapper" id="bookFormWrapper">
-			<h6>Fill in the form,</h6>
+			<h6>Fill in the form</h6>
 			<p>for booking a massage</p>
 			<form method="post" class="form" id="bookForm" action="mail.php">
 				<input type="hidden" name="whatform" value="Форма - Записаться на массаж" />
