--- a/en.html
+++ b/en.html
@@ -53,6 +53,7 @@
 	</div>
 	<!-- main -->
 	<main>
+		<a class="scroll" href="#price"><i class="fa fa-chevron-down" aria-hidden="true"></i>
 		<div class="container relative">
 			<div class="toggle_btn">
 				<span class="sandwich">
@@ -100,7 +101,7 @@
 	</div>
 
 
-	<section id="gallery" class="gallery">
+	<!-- <section id="gallery" class="gallery">
 		<div class="container">
 			<h3>Gallery</h3>
 			<div class="gallery_wrapper">
@@ -114,8 +115,23 @@
 				<img src="img/gallery_3.jpg" alt="">
 				<img src="img/gallery_1.jpg" alt="">
 			</div>
+			<div class="slider_wrapper">
+				<div class="prev"><i class="fa fa-chevron-circle-left" aria-hidden="true"></i></div>
+				<div class="next"><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></div>
+				<div class="slider">
+					<img src="img/gallery_1.jpg" alt="">
+					<img src="img/gallery_2.jpg" alt="">
+					<img src="img/gallery_3.jpg" alt="">
+					<img src="img/gallery_3.jpg" alt="">
+					<img src="img/gallery_1.jpg" alt="">
+					<img src="img/gallery_2.jpg" alt="">
+					<img src="img/gallery_2.jpg" alt="">
+					<img src="img/gallery_3.jpg" alt="">
+					<img src="img/gallery_1.jpg" alt="">
+				</div>
+			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section id="price" class="price">
 		<div class="container">
@@ -161,7 +177,7 @@ in tune with each other.</p>
 			<div class="row"> -->
 				<div class="col-sm-4">
 					<img src="img/price_4.jpg" alt="">
-					<h4>Thai massage + Pahopspan <br><span>1</span></h4>
+					<h4>Thai massage with hot <br>herbal poultices</h4>
 					<h5>60 min – 650 UAH <br>90 min – 850 UAH</h5>
 					<p>A combination of traditional
 massage and deep body
@@ -208,6 +224,7 @@ state.</p>
 				<div class="col-sm-6 col-md-5">
 					<h3 class="yellow">GIFT <br>CERTIFICATE</h3>
 					<p>The best chance to make a pleasant and useful gift</p>
+					<p class="gift_exp">Certificate validity is 6 months from the date of purchase. The certificate must be presented to the salon's administrator before starting the massage.</p>
 				</div>
 			</div>
 		</div>
@@ -217,8 +234,8 @@ state.</p>
 		<div class="container">
 			<h3>Staff</h3>
 			<div class="row">
-				<div class="col-sm-5 col-md-5">
-					<!-- <img src="img/personal_1.jpg" alt=""> -->
+				<div class="col-sm-5 col-md-5 photo">
+					<img src="img/personal_1.jpg" alt="">
 					<h4>Master Ann, <br><span>certified massage therapist</span></h4>
 					<p>year of birth – 1986 <br>height – 153 cm, weight – 65 kg</p>
 				</div>
@@ -227,8 +244,8 @@ state.</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-5 col-md-5">
-					<!-- <img src="img/personal_1.jpg" alt=""> -->
+				<div class="col-sm-5 col-md-5 photo">
+					<img src="img/personal_2.jpg" alt="">
 					<h4>Master Bee, <br><span>certified massage therapist</span></h4>
 					<p>year of birth – 1982 <br>height – 151 cm, weight – 55 kg</p>
 				</div>
