--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 	</div>
 	<!-- main -->
 	<main>
+		<a class="scroll" href="#price"><i class="fa fa-chevron-down" aria-hidden="true"></i></a>
 		<div class="container relative">
 			<div class="toggle_btn">
 				<span class="sandwich">
@@ -100,7 +101,7 @@
 	</div>
 
 
-	<section id="gallery" class="gallery">
+	<!-- <section id="gallery" class="gallery">
 		<div class="container">
 			<h3>Фото салону</h3>
 			<div class="gallery_wrapper">
@@ -130,7 +131,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section id="price" class="price">
 		<div class="container">
@@ -188,6 +189,7 @@
 				<div class="col-sm-6 col-md-5">
 					<h3 class="yellow">Подарунковий <br>сертифікат</h3>
 					<p>Це найкраща можливість зробити приємний та корисний подарунок</p>
+					<p class="gift_exp">Термін дії сертифікату - 6 місяців з дня купівлі. Сертифікат потрібно пред’явити адміністратору салона перед початком масажу.</p>
 				</div>
 			</div>
 		</div>
@@ -197,8 +199,8 @@
 		<div class="container">
 			<h3>Персонал</h3>
 			<div class="row">
-				<div class="col-sm-5 col-md-5">
-					<!-- <img src="img/personal_1.jpg" alt=""> -->
+				<div class="col-sm-5 col-md-5 photo">
+					<img src="img/personal_1.jpg" alt="">
 					<h4>Майстер Енні <br><span>сертифікований масажист</span></h4>
 					<p>рік народження – 1986 р. <br>зріст – 153 см, вага – 65 кг.</p>
 				</div>
@@ -207,8 +209,8 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-5 col-md-5">
-					<!-- <img src="img/personal_1.jpg" alt=""> -->
+				<div class="col-sm-5 col-md-5 photo">
+					<img src="img/personal_2.jpg" alt="">
 					<h4>Майстер Бі <br><span>сертифікований масажист</span></h4>
 					<p>рік народження – 1982 р. <br>зріст – 151 см, вага – 55 кг.</p>
 				</div>
