--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			<h3>Персонал</h3>
 			<div class="row">
 				<div class="col-sm-5 col-md-5 photo">
-					<img src="img/personal_1.jpg" alt="">
+					<img src="img/personal_1_.jpg" alt="">
 					<h4>Майстер Енні <br><span>сертифікований масажист</span></h4>
 					<p>рік народження – 1986 р. <br>зріст – 153 см, вага – 65 кг.</p>
 				</div>
@@ -210,7 +210,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-5 col-md-5 photo">
-					<img src="img/personal_2.jpg" alt="">
+					<img src="img/personal_2_.jpg" alt="">
 					<h4>Майстер Бі <br><span>сертифікований масажист</span></h4>
 					<p>рік народження – 1982 р. <br>зріст – 151 см, вага – 55 кг.</p>
 				</div>
