--- a/en.html
+++ b/en.html
@@ -235,7 +235,7 @@ state.</p>
 			<h3>Staff</h3>
 			<div class="row">
 				<div class="col-sm-5 col-md-5 photo">
-					<img src="img/personal_1.jpg" alt="">
+					<img src="img/personal_1_.jpg" alt="">
 					<h4>Master Ann, <br><span>certified massage therapist</span></h4>
 					<p>year of birth – 1986 <br>height – 153 cm, weight – 65 kg</p>
 				</div>
@@ -245,7 +245,7 @@ state.</p>
 			</div>
 			<div class="row">
 				<div class="col-sm-5 col-md-5 photo">
-					<img src="img/personal_2.jpg" alt="">
+					<img src="img/personal_2_.jpg" alt="">
 					<h4>Master Bee, <br><span>certified massage therapist</span></h4>
 					<p>year of birth – 1982 <br>height – 151 cm, weight – 55 kg</p>
 				</div>
