--- a/en.html
+++ b/en.html
@@ -327,7 +327,8 @@ from 10:00 to 13:00.</p>
 	</section>
 
 	<section class="map">
-		<img src="img/map.jpg" alt="">
+		<!-- <img src="img/map.jpg" alt=""> -->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d2541.9962824013114!2d30.46315631588593!3d50.42254089725628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x40d4ceb7d9d83d4f%3A0xab221b3f93e2db26!2z0L_RgNC-0YHQv9C10LrRgiDQktCw0LvQtdGA0ZbRjyDQm9C-0LHQsNC90L7QstGB0YzQutC-0LPQviwgNtCQLCDQmtC40ZfQsiwgMDMwMzc!3m2!1d50.4225375!2d30.465345!5e0!3m2!1sru!2sua!4v1508439642721" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</section>
 
 	<footer>
